@@ -25,6 +25,7 @@
     if (this.options.name) {
       this.element.attr("data-varname", this.options.name);
     }
+    JSAV.utils._helpers.handlePosition(this.element, this.options);
     if (!this.options.visible) {
       this.element.css("display", "none");
     }    
