@@ -36,6 +36,7 @@
     if (!this.options.element) {
       $(this.jsav.canvas).append(el);
     }
+    JSAV.utils._helpers.handlePosition(el, this.options);
     this.element = el;
     this.rootnode = this.newNode("", null);
     this.element.attr({"data-root": this.rootnode.id(), "id": this.id()});
